--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-.App {
+/* .App {
   text-align: center;
-}
+} */
 
 .App-logo {
   height: 40vmin;
@@ -12,16 +12,29 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+.App-item_Center_horizontally{
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+}
+.App-vw30{
+  width: 30%;
+}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App-item_Center_vertically{
+  align-items: center;
   display: flex;
   flex-direction: column;
+}
+.App-header {
+  background-color: #ffffff;
+  min-height: 100vh;
+  display: flex;
+  /* flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(0, 0, 0);
 }
 
 .App-link {
